# swift-bindgen

./: .gitignore  Cargo.toml  README.md
swift/: Cargo.toml
swift-bindgen/: Cargo.toml
swift-bindgen/src/: lib.rs
swift-rt/: Cargo.toml
swift-rt/src/: lib.rs
swift-rt/src/borrow/: mod.rs  relative_direct.rs  relative_indirectable.rs
swift-rt/src/ctx_desc/: base.rs  extension.rs  mod.rs  module.rs  protocol.rs
swift-rt/src/ctx_desc/ty/: base.rs  class.rs  enum_.rs  mod.rs  struct_.rs
swift-rt/src/mangling/: mangled.rs  mod.rs
swift-rt/src/metadata/: enum_.rs  metadata.rs  metatype.rs  mod.rs  response.rs  struct_.rs  ty.rs
swift-rt/src/metadata/context_descriptor/: base.rs  extension.rs  mod.rs  module.rs
swift-rt/src/metadata/context_descriptor/ty/: base.rs
swift-rt/src/metadata/tuple/: element.rs  labeled_element_iter.rs  mod.rs
swift-rt/src/metadata/tuple/labels/: iter.rs  (+2 more)
swift-rt/src/reflection/: field_descriptor.rs  field_record.rs  mod.rs
swift-sys/: Cargo.toml  build.rs
swift-sys/src/: casting.rs  lib.rs  opaque.rs
swift-sys/src/ctx_desc/: base.rs  extension.rs  flags.rs  kind.rs  mod.rs  module.rs  protocol.rs
swift-sys/src/ctx_desc/ty/: base.rs  class.rs  enum_.rs  mod.rs  struct_.rs
swift-sys/src/heap/: fns.rs  mod.rs
swift-sys/src/mem/: layout.rs  mod.rs
swift-sys/src/metadata/: access_function.rs  enum_.rs  fns.rs  kind.rs  metadata.rs  metatype.rs  mod.rs  request.rs  response.rs  state.rs  struct_.rs  tuple.rs
swift-sys/src/metadata/context_descriptor/: base.rs  extension.rs  flags.rs  kind.rs  mod.rs  module.rs
swift-sys/src/metadata/value_witness/: flags.rs  mod.rs  table.rs
swift-sys/src/ptr/: mod.rs  relative_direct.rs  relative_indirectable.rs
swift-sys/src/reflection/: mod.rs
swift-sys/src/reflection/field_descriptor/: kind.rs  mod.rs
swift-sys/src/reflection/field_record/: flags.rs  mod.rs
swift/examples/: array_metadata.rs  string_fields.rs
swift/src/: any_object.rs  array.rs  eq.rs  lib.rs  macros.rs  never.rs  object_identifier.rs  primitive.rs  ty.rs
swift/src/array/: empty.rs  mod.rs
swift/src/hash/: hashable.rs  hasher.rs  mod.rs
swift/src/protocols/: comparable.rs  equatable.rs  mod.rs
swift/src/ptr/: mod.rs  raw.rs  raw_buf.rs  typed.rs  typed_buf.rs
swift/src/string/: cmp.rs  mod.rs
swift/src/util/: bit_pattern.rs  mod.rs  nil.rs
(+2 files in other folders)
